# verifi-app

./: .gitignore  README.md  package-lock.json
ai-agent/: .env.example  blockchain_service.py  config.py  ipfs_service.py  main.py  package-lock.json  pyproject.toml  requirements.txt  verification_service.py
ai-agent/tests/: test_blockchain_service.py  test_config.py  test_ipfs_service.py  test_verification_service.py
contracts/: .env.example  coverage.json  eslint.config.js  hardhat.config.cts  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: AIEscrowMarketplace.sol
contracts/coverage/: coverage-final.json  index.html  lcov.info  prettify.js
contracts/coverage/contracts/: AIEscrowMarketplace.sol.html  index.html
contracts/coverage/lcov-report/: index.html
contracts/scripts/: deploy.ts  progress_job.ts
contracts/test/: AIEscrowMarketplace.test.ts  Marketplace.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: AIEscrowMarketplace.ts  index.ts
doc/: TESTING_SETUP.md  UML_diagram.md  development_plan.md  erc8004_cross_chain_payment_design.en.md  testing_documentation.md
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/artifacts/: AIEscrowMarketplace.json
frontend/src/components/: CreateJobForm.tsx  JobList.tsx  theme-provider.tsx
frontend/src/contexts/: Web3Context.tsx
(+42 files in other folders)
